--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -65,7 +65,7 @@
                                 <MudSimpleTable>
                                     <thead>
                                         <tr>
-                                            <th>Less than</th>
+                                            <th>&lt; LESS</th>
                                             <th>Lower</th>
                                             <th>Upper</th>
                                         </tr>
