--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -174,7 +174,7 @@
                     <MudSimpleTable>
                         <thead>
                             <tr>
-                                <th>Less than</th>
+                                <th>&lt; LESS</th>
                                 <th>Lower</th>
                                 <th>Upper</th>
                             </tr>
