--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
@@ -40,8 +40,8 @@
                 </MudGrid>
             </ChildContent>
             <ItemRenderer>
-                <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2" Style="@IsContractedStyles(context.Contracted)">
-                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-1">
+                <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2" Style="@IsDisabledStyles(context.Contracted)">
+                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
                         <MudText Class="overflow-hider">@(context.Driver?.FullName)</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
@@ -69,14 +69,13 @@
             dropItem.Item.BaseTeamId = long.Parse(dropItem.DropzoneIdentifier);
     }
 
-    private string IsContractedStyles(bool contracted)
+    private string IsDisabledStyles(bool contracted)
     {
         if (contracted)
         {
             return @"color: var(--mud-palette-action-disabled) !important;
                      cursor: default !important;
-                     pointer-events: none !important;
-                     background-color: red !important;";
+                     pointer-events: none !important;";
         }
 
         return string.Empty;
