--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
@@ -6,7 +6,7 @@
     <MudPaper Elevation="15">
         @if (!_config.Value.PersonalNumbersEnabled)
         {
-            <MudText Color="Color.Info">Don't worry about the numbers, these fix themselves</MudText>
+            <MudText Typo="Typo.body2" Color="Color.Info">Don't worry about the order of the numbers, these fix themselves on save</MudText>
         }
         <MudForm>
             <MudTable T="EditSeasonDriverModel" Items="@Model.SeasonDrivers" Hover="true" Class="overflow-hider">
@@ -65,9 +65,6 @@
 
     [Parameter] public long? PreviousSeasonId { get; set; }
 
-    private bool tempContracting;
-    private long tempLeagueId;
-
     protected override async Task OnInitializedAsync()
     {
         await SetDriverEditors();
@@ -88,8 +85,8 @@
         }
 
         List<Contract>? leagueContracts = null;
-        if (tempContracting)
-            leagueContracts = await _contractService.GetLeagueContracts(tempLeagueId);
+        if (Model.HasContracting)
+            leagueContracts = await _contractService.GetLeagueContracts(Model.LeagueId);
 
         int indexer = 0;
         foreach (var driver in Model.BaseDrivers.Where(e => !(Model.SeasonDrivers.Select(sd => sd.DriverId).Contains(e.Id))))
