--- a/SimTECH/SimTECH/Pages/Leagues/LeagueContracts.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueContracts.razor
@@ -69,7 +69,7 @@
                 <ItemRenderer>
                     <MudPaper Class="mud-width-full border-2 border-dashed mud-border-tertiary pa-1 my-2" Style="@IsDisabledStyles(context.Id)">
                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
-                            <MudText Class="overflow-hider">@(context.Driver?.FullName ?? "[Unknown]")</MudText>
+                            <MudText Class="overflow-hider">@(context.Duration) - @(context.Driver?.FullName ?? "[Unknown]")</MudText>
                             <MudSpacer />
                             <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
                         </MudStack>
