well at least it is starting to look decent

--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -3,10 +3,8 @@
 </MudElement>
 
 @code {
-    [Parameter] public Country Code { get; set; }
-
+    [Parameter] public Country Code { get; set; } = Constants.DefaultCountry;
     [Parameter] public ElementSize Size { get; set; } = ElementSize.Normal;
-
     [Parameter] public string Class { get; set; } = string.Empty;
 
     private string flagSize
