--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -1,7 +1,7 @@
 ﻿@page "/credits"
 @inject BreadcrumbProvider _bread
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudGrid>
         <MudItem xs="12">
             <MudPaper>
