--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Tyre suppliers</PageTitle>
 
-<MudContainer Class="mt-4">
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Tyre suppliers</MudText>
