--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>Raweceek</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-4" id="raceweek-container">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4" id="raceweek-container">
     @if (!loading)
     {
         <MudGrid Spacing="1">
