--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -14,7 +14,7 @@
 
 <PageTitle>Overview</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     @if (Season != null)
     {
         <CascadingValue Value="@Season" IsFixed="true">
