--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Components</PageTitle>
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
     @if (!loading)
     {
         <MudGrid>
