--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
@@ -58,7 +58,7 @@
                 {
                     @foreach (var result in teamResults)
                     {
-                        <ResultCell Result="@result" LowestScoringPosition="@lowestScoringPosition" OverrideTypo="Typo.caption" />
+                        <ResultCell Result="@result" LowestScoringPosition="@lowestScoringPosition" OverrideTypo="Typo.caption" WithBonus="false" />
                     }
                 }
                 else
