--- a/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
+++ b/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager _nav
 @inject ISnackbar _snack
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudGrid>
         <MudItem xs="12">
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-row justify-center pa-4">
