--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Test</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-16 px-8">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-16 px-8">
     <MudGrid>
         <MudItem xs="9">
             <MudGrid>
