--- a/SimTECH/SimTECH/Pages/UserManual/Guide.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Guide.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Guide</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudGrid Spacing="1">
         <MudItem xs=12>
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
