--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -35,14 +35,12 @@
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.ExtraLarge">
-            @Body
-        </MudContainer>
+        @Body
     </MudMainContent>
 </MudLayout>
 
 @code {
-    MudTheme Theme { get; set; } = Constants.SynthTheme;
+    MudTheme Theme { get; set; } = Constants.GalacticTheme;
 
     bool drawerOpen = true;
     bool isDarkTheme = true;
