--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -9,7 +9,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False" Class="mt-16 px-8">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-16 px-8">
     <MudGrid Spacing="1">
         <MudItem xs="12">
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
@@ -113,9 +113,7 @@
                             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                 <MudText Typo="Typo.body2">[R@(context.Round)] @(context.Name)</MudText>
                                 <MudSpacer />
-                                <MudPaper Class="px-2 fallback-muted-background-gray">
-                                    <CountryFlag Code="@context.Country" Size="ElementSize.Small" />
-                                </MudPaper>
+                                <CountryFlag Code="@context.Country" Size="ElementSize.Small" />
                             </MudStack>
                         </MudTd>
                         <MudTd Class="accent-cell">
